fixed missing space index.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,11 +145,12 @@ a.card-link:hover,
 @media only screen and (max-width: 767px) {
   
   .mobilCaption {
+    text-align: center;
     display: block;
     background-color: #343a40;
     opacity: 0.7;
     color: white;
-    padding: 10px 15px 30px;
+    padding: 20px 15px 30px;
     
   }
 }
